# suppi-ml

./: .gitignore  pyproject.toml  requirements.txt
app/: df_run.cvs  main5.ipynb  main6.ipynb  step_0.ipynb  step_1.ipynb  step_2.ipynb  step_3.ipynb  step_4.ipynb  step_split.ipynb
app/data/shops/shop_1/: meta-479580b8-30b1-4ace-9da1-77649e3c39ee.csv
app/dev/logger/: logger.ipynb  logger.py
app/models/: model.py  model_0.ipynb
app/pipeline/step_0/: build_pipeline.py  custom_transformers.py
app/pipeline/step_1/: build_pipeline.py
app/pipeline/step_2/: build_pipeline.py
app/pipeline/step_3/: build_pipeline.py  custom_transformers.py
app/pipeline/step_4/: build_pipeline.py
app/pipeline/step_5/: build_pipeline.py
app/pipeline/step_split/: build_pipeline.py
app/utils/: reader.py
app/utils/cv/: cv_for_ts.py
exploration/: explo.ipynb  info.ipynb  main.ipynb  test.ipynb
tests/: app.py  first_module.ipynb  second_module.ipynb
