[tool.poetry]
name = "suppi-ml"
version = "0.1.0"
description = ""
authors = ["Daniil Bakushkin <dev.daniil.bakushkin@gmail.com>"]
readme = "README.md"
packages = [{include = "suppi_ml"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
